@@ -1,4 +1,5 @@
-EBUILD qt-creator-1.3.0_rc1.ebuild 2931 RMD160 8a5d39f6cc6b41105f2c603632921eeda3dad1ff SHA1 f5c8fb188c3c5091c3e0a2205ef4a42c545dc149 SHA256 0d8d799eaa15e03f4fdafea87c0c362b0303025a43f18263e244f78b2935a2d2
+DIST qt-creator-1.3.0-src.tar.gz 10613989 RMD160 d1c339dea74538a840317792b62b7a38ef10bcd0 SHA1 ccb1228411b9b7d5f3a734ee1a667b4a17ef0a26 SHA256 dd964ae6a9512904da94e681c461fbbfffd4505af33972e41b44b7f55ab846e1
+EBUILD qt-creator-1.3.0.ebuild 2889 RMD160 1d4d707604c5dc1383e12ed65a38f811eb9c5903 SHA1 8c14b71ecdeff68e871c7338a3a471d41ee60547 SHA256 8d6792cbe7583c7828a5bb78eedad252372eb41b5634ef99700b4c69bb8dc87a
 EBUILD qt-creator-9999.ebuild 2888 RMD160 ef89567fb1628acdccef4a09fb673642eb3f574b SHA1 774d8b60537e93baa46e4e45189038c57aa47211 SHA256 897ea73a967c439ea663676a743175b503fc31771909aa17c1d035377d8b4260
-MISC ChangeLog 8960 RMD160 e85f4077b10da6a6ea8c554a3486d87304180328 SHA1 9a6d84ac7cf370d17d6b897245156d73084c16bf SHA256 1d78589d936c7efdc7c46550bdb2e9435693924e92a68b750aefcf5e5b8a2ebe
+MISC ChangeLog 9127 RMD160 6615690a9033f6f84350e41b822d5cdc65d172b3 SHA1 d234d11cfe7cf2c440396b7c160717ca19bc7d4d SHA256 b4fc9d34f51fce8395d434064bc75e79a9859d864f159e47d652a9c59fe9538f
 MISC metadata.xml 950 RMD160 136ec99e9aec67089e3829caa726b03d2834b154 SHA1 85223091cfbeb8aa99b0f37004a334d25c430d92 SHA256 106347aee363bb389a5a912a1b6180aeaddff31f0e80cf834cd41ba596571917
