@@ -2,10 +2,6 @@
 # Add your name and the date, as well as an explanation for the mask
 # Make sure the atoms you add are valid!
 
-# Dominik Kapusta <ayoy@gentoo.org> (21 Nov 2009)
-# Masking release candidate.
-=dev-util/qt-creator-1.3.0_rc1
-
 # Markos Chandras <hwoarang@gentoo.org> (20 Nov 2009)
 # Snapshots are not for everybody :)
 =dev-python/PyQt4-4.7_pre*
