@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*qt-creator-1.3.0 (01 Dec 2009)
+
+  01 Dec 2009; Dominik Kapusta <ayoy@gentoo.org>
+  -qt-creator-1.3.0_rc1.ebuild, +qt-creator-1.3.0.ebuild:
+  Version bump, remove rc
+
   21 Nov 2009; Dominik Kapusta <ayoy@gentoo.org> qt-creator-9999.ebuild:
   Applying rc1 changes to the live ebuild
 
